<resources>
    <string name="app_name">Shop</string>

    <string name="panel">ПАНЕЛЬ</string>
    <string name="catalogProducts">ПРОДУКЦИЯ</string>
    <string name="catalogClothes">СОРТИРОВКА</string>
    <string name="shoes">ОБУВЬ</string>
    <string name="accessories">АКСЕССУАРЫ</string>

    <string name="catalogCategories">КАТЕГОРИИ</string>
    <string name="addCategory">ДОБАВИТЬ КАТЕГОРИЮ</string>
    <string name="addProduct">ДОБАВИТЬ ПРОДУКТ</string>
    <string name="editCategory">РЕДАКТИРОВАНИЕ КАТЕГОРИИ</string>
    <string name="editProduct">РЕДАКТИРОВАНИЕ ПРОДУКТОВ</string>

    <string name="labelEnterCategory">Введите название категории</string>
    <string name="labelEnterNameProduct">Введите название товара</string>
    <string name="labelEnterPriceProduct">Введите цену товара</string>
    <string name="deleteAllCategories">УДАЛИТЬ ВСЕ КАТЕГОРИИ</string>
    <string name="deleteAllProducts">УДАЛИТЬ ВСЕ ТОВАРЫ</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>