<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".tabs.PanelEditProduct">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/orange"
        android:padding="10dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/headerEditProduct"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/editProduct"
            android:textColor="@color/black" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sectionEditNameProduct"
            app:boxBackgroundColor="@android:color/transparent"
            app:boxStrokeColor="@android:color/white"
            app:boxStrokeWidthFocused="4dp"
            app:endIconMode="clear_text"
            app:endIconTint="@android:color/holo_red_light"
            app:hintTextColor="@android:color/white"
            app:layout_constraintTop_toBottomOf="@id/headerEditProduct"
            app:startIconDrawable="@drawable/catalog_categories"
            app:startIconTint="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/labelEnterNameProduct">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editNameProduct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textColor="@android:color/white"
                android:textCursorDrawable="@drawable/cursor" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sectionEditCategoryProduct"
            app:boxBackgroundColor="@android:color/transparent"
            app:boxStrokeColor="@android:color/white"
            app:boxStrokeWidthFocused="4dp"
            app:endIconMode="clear_text"
            app:endIconTint="@android:color/holo_red_light"
            app:hintTextColor="@android:color/white"
            app:layout_constraintTop_toBottomOf="@id/sectionEditNameProduct"
            app:startIconDrawable="@drawable/catalog_products"
            app:startIconTint="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/labelEnterCategory">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editCategoryProduct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textColor="@android:color/white"
                android:textCursorDrawable="@drawable/cursor" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sectionEditPriceProduct"
            app:boxBackgroundColor="@android:color/transparent"
            app:boxStrokeColor="@android:color/white"
            app:boxStrokeWidthFocused="4dp"
            app:endIconMode="clear_text"
            app:endIconTint="@android:color/holo_red_light"
            app:hintTextColor="@android:color/white"
            app:layout_constraintTop_toBottomOf="@id/sectionEditCategoryProduct"
            app:startIconDrawable="@drawable/price"
            app:startIconTint="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/labelEnterPriceProduct">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editPriceProduct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textColor="@android:color/white"
                android:textCursorDrawable="@drawable/cursor" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/sectionResEditProduct"
            app:layout_constraintTop_toBottomOf="@id/sectionEditPriceProduct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/resEditNameProduct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/black" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/resEditCategoryProduct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/black" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/resEditPriceProduct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/black" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonEditProduct"
            app:layout_constraintTop_toBottomOf="@id/sectionResEditProduct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/black"
            android:text="@string/editProduct"
            android:textColor="@color/orange" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>